Fixed issue reporte by James Smith. Tables now overflow.

--- a/src/themes/material/assets/mat.css
+++ b/src/themes/material/assets/mat.css
@@ -78,3 +78,7 @@ a:hover .article-title {
 .disp-formula {
     overflow-x: auto;
 }
+
+.table-wrap {
+    overflow-x: auto;
+}
